--- a/app/assets/stylesheets/dictionary.scss
+++ b/app/assets/stylesheets/dictionary.scss
@@ -162,6 +162,7 @@
           color: #630;
           font-size: 14px;
           line-height: 150%;
+          white-space: pre-line;
         }
         .footer {
           padding: 10px;
